# web-server

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: deploy.yml  restart.yml
src/: config.py  database.py  logger_config.py  main.py
src/agent/: agent.py  aprompt.py  chain.py  prompts.py  router.py  schemas.py  tool.py
src/auth/: config.py  jwt.py  models.py  router.py  schemas.py  service.py
src/auth/util/: github.py  jwt.py  redis.py
src/bot/: router.py  util.py
src/chroma_db/: chroma.sqlite3
src/common/util/: github.py  permissions.py
src/config/: .gitignore  config.py  database.py  logger_config.py  middleware.py  trace_config.py  volume_config.py
src/exceptions/: definitions.py  handler.py
src/issue/: repository.py  router.py  schemas.py  service.py
src/issue_reschedule_request/: models.py  repository.py
src/issue_rescheduling/: models.py  repository.py  router.py  schemas.py  service.py
src/models/: __init__.py
src/project/: model.py  models.py  repository.py  router.py  schemas.py  service.py
src/project_user/: models.py  repository.py
src/response/: error_definitions.py  handler.py  report_error.py  schemas.py  success_definitions.py
src/stat/: service.py
src/user/: models.py  repository.py  router.py  schemas.py  service.py
src/user_repository/: models.py  repository.py  router.py  schemas.py  service.py
