[project]
name = "web-server"
version = "0.1.0"
description = ""
authors = [
    {name = "jhssong",email = "jhssong02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "colorlog (>=6.9.0,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "langchain-chroma (>=0.2.3,<0.3.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-google-genai (>=2.1.4,<3.0.0)",
    "langchain-google-vertexai (>=2.0.21,<3.0.0)",
    "pdfplumber (>=0.11.6,<0.12.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "autoflake (>=2.3.1,<3.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
]


[tool.poetry]
packages = [{include = "src"}]

[tool.isort]
profile = "black"
known_first_party = ["web-server"]
known_third_party = ["fastapi", "sqlalchemy", "pydantic", "uvicorn"]
line_length = 88


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
